# Kaustav-PCL-Workspace

./: .gitmodules  CMakeLists.txt  README.md
ROS_industrial_ws/src/detect_pump/: CMakeLists.txt
ZZZ/: README.md
ZZZ/ROS_industrial_ws/src/detect_pump/: package.xml
ZZZ/ROS_industrial_ws/src/detect_pump/nodes/: image_pub.py
ZZZ/robotics_backend_ws/src/driver_wrapper_cpp_pkg/: CMakeLists.txt
ZZZ/robotics_backend_ws/src/driver_wrapper_cpp_pkg/src/: motor_ros_wrapper_withOOP.cpp  motor_ros_wrapper_withoutOOP.cpp
industrial_ros_ws/src/detect_pump/: CMakeLists.txt
industrial_ros_ws/src/detect_pump/nodes/: detect_pump.py
robotics_backend_ws/devel/: .catkin  .rosinstall
robotics_backend_ws/devel/lib/pkgconfig/: driver_wrapper_python_pkg.pc
robotics_backend_ws/src/driver_wrapper_cpp_pkg/: CMakeLists original.txt  CMakeLists.txt  package.xml
robotics_backend_ws/src/driver_wrapper_cpp_pkg/include/: motor_driver.hpp
robotics_backend_ws/src/driver_wrapper_cpp_pkg/include/my_robot_driver/: motor_driver.hpp
robotics_backend_ws/src/driver_wrapper_cpp_pkg/launch/: launch_motor_driver_cpp_with_params.launch
robotics_backend_ws/src/driver_wrapper_cpp_pkg/src/: motor_ros_wrapper_withOOP.cpp  motor_ros_wrapper_withoutOOP.cpp
robotics_backend_ws/src/driver_wrapper_python_pkg/: CMakeLists.txt  package.xml  setup.py
robotics_backend_ws/src/driver_wrapper_python_pkg/launch/: launch_motor_driver_with_params.launch
robotics_backend_ws/src/driver_wrapper_python_pkg/scripts/: motor_ros_wrapper_withOOP.py  motor_ros_wrapper_withoutOOP.py
ros1melodic_moveit_ws/: .gitmodules
ros1melodic_pcl_ws/: CMakeLists.txt
ros1melodic_pcl_ws/src/part004_feature_estimation/: normal_estimation_all_points.cpp  normal_estimation_using_integral_image.cpp
ros1melodic_pcl_ws/src/part004a_feature_estimation/: normal_estimation_subset_points.cpp  normal_estimation_surface_another_dataset.cpp
ros1melodic_pcl_ws/src/part004b_feature_histogram/: basic_point_feature_histogram.cpp
ros_industrial_ws/src/detect_pump/nodes/: image_sub.py
src/part001_writing_pcd_files/: pcd_write.cpp
src/part002_matrix_transform/: matrix_transform.cpp
src/part003_custom_point_data_types/: custom_point.cpp
src/part004_feature_estimation/: surface_normal_estimation_all_points.cpp
temp/: template_alignment.cpp
wiki_ROS_ws/src/opencv_tutorial_python/: package.xml
wiki_ros/src/opencv_tutorial_python/: CMakeLists.txt
(+3 files in other folders)
